--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [tool.poetry]
 name = "battlemetrics"
 description = "Asyncronous Python wrapper for the BattleMetrics API."
-version = "2.0a"
+version = "2.0.0"
 authors = ["OseSem <sem@osesem.me>", "Gnomeslayer <declan.otten@live.com.au>"]
 license = "MIT"
 readme = "README.md"
@@ -26,6 +26,7 @@ pre-commit = "^4.2.0"
 pyright = "^1.1.383"
 taskipy = "^1.13.0"
 python-dotenv = "^1.0.1"
+rich = "^14.1.0"
 
 
 [tool.poetry.urls]
@@ -69,10 +70,13 @@ ignore = [
     "D104",   # docstrings in public package.
     "ANN101", # self type hint.
     "ANN401", # Any type hint.
+    "N815",   # Mixed case variable name.
     "N818",   # Error suffix.
 
     "PLR0913", # Too many arguments.
     "PLR2004", # Constant Variables
+
+    "UP037", # Quatations in type hints.
 
     "C901", # Function is too complex
 
@@ -82,9 +86,7 @@ ignore = [
 ]
 
 [tool.ruff.lint.per-file-ignores]
-"**/__init__.py" = [
-    "F403", # Wildcard imports
-]
+"**/__init__.py" = ["F403"] # Wildcard imports
 
 [tool.ruff.lint.pydocstyle]
 convention = "numpy"
