--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,7 +2,7 @@
 name = "battlemetrics"
 description = "Asyncronous Python wrapper for the BattleMetrics API."
 version = "2.0.0"
-authors = ["OseSem <sem@osesem.me>", "Gnomeslayer <declan.otten@live.com.au>"]
+authors = ["OseSem <sem@osesem.xyz>", "Gnomeslayer <declan.otten@live.com.au>"]
 license = "MIT"
 readme = "README.md"
 classifiers = [
