--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -15,8 +15,10 @@ jobs:
         python-version: ["3.10", "3.11", "3.12"]
       fail-fast: false
     steps:
-      - uses: actions/checkout@v3
-      - uses: actions/setup-python@v3
+      - uses: actions/checkout@v4
+      - uses: actions/setup-python@v5
+        with:
+          python-version: ${{ matrix.python-version }}
       - uses: pre-commit/action@v3.0.1
         with:
           extra_args: --all-files
@@ -28,14 +30,17 @@ jobs:
         python-version: ["3.10", "3.11", "3.12"]
       fail-fast: false
     steps:
-      - uses: actions/checkout@v3
-      - run: pipx install poetry
+      - uses: actions/checkout@v4
 
-      - uses: actions/setup-python@v4
+      - name: Install uv
+        uses: astral-sh/setup-uv@v5
+
+      - uses: actions/setup-python@v5
         with:
-          cache: "poetry"
-      - run: poetry install
-      - run: echo "$(poetry env info --path)/bin" >> $GITHUB_PATH
+          python-version: ${{ matrix.python-version }}
+
+      - name: Install dependencies
+        run: uv sync
 
       - uses: jakebailey/pyright-action@v2
         with:
