--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -5,28 +5,24 @@ on:
     types: [published]
 
 jobs:
-  regular:
+  publish:
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        python-version: [3.10]
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
         with:
           fetch-tags: true
 
-      - name: Install poetry
-        run: pipx install poetry
+      - name: Install uv
+        uses: astral-sh/setup-uv@v5
 
-      - name: Set up Python ${{ matrix.python-version }}
-        uses: actions/setup-python@v2
+      - name: Set up Python
+        uses: actions/setup-python@v5
         with:
-          python-version: ${{ matrix.python-version }}
+          python-version: "3.10"
 
-      - name: Compile package
-        run: |
-          poetry build
+      - name: Build package
+        run: uv build
 
       - name: Upload package
         uses: pypa/gh-action-pypi-publish@release/v1
