--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,10 +1,14 @@
-[tool.poetry]
+[project]
 name = "battlemetrics"
 description = "Asyncronous Python wrapper for the BattleMetrics API."
 version = "2.0.0"
-authors = ["OseSem <sem@osesem.xyz>", "Gnomeslayer <declan.otten@live.com.au>"]
-license = "MIT"
+authors = [
+    { name = "OseSem", email = "sem@osesem.xyz" },
+    { name = "Gnomeslayer", email = "declan.otten@live.com.au" },
+]
+license = { text = "MIT" }
 readme = "README.md"
+requires-python = ">=3.10"
 classifiers = [
     "Development Status :: 5 - Production/Stable",
     "Intended Audience :: Developers",
@@ -14,49 +18,29 @@ classifiers = [
     "Programming Language :: Python :: 3.11",
     "Programming Language :: Python :: 3.12",
 ]
+dependencies = ["aiohttp>=3.9.3", "pydantic>=2.0.0", "python-dateutil>=2.8.2"]
 
-[tool.poetry.dependencies]
-python = "^3.10"
-aiohttp = "^3.9.3"
-pydantic = "^2.0.0"
-python-dateutil = "^2.8.2"
+[project.urls]
+"Homepage" = "https://github.com/OseSem/battlemetrics"
+"Issue Tracker" = "https://github.com/OseSem/battlemetrics/issues"
 
-[tool.poetry.group.dev.dependencies]
-pre-commit = "^4.2.0"
-pyright = "^1.1.383"
-taskipy = "^1.13.0"
-python-dotenv = "^1.0.1"
-rich = "^14.1.0"
-
-
-[tool.poetry.urls]
-"Homepage" = "https://github.com/Gnomeslayer/battlemetrics"
-"Issue Tracker" = "https://github.com/Gnomeslayer/battlemetrics/issues"
-
+[dependency-groups]
+dev = [
+    "pre-commit>=4.2.0",
+    "pyright>=1.1.383",
+    "python-dotenv>=1.0.1",
+    "rich>=14.1.0",
+    "ruff>=0.8.0",
+]
 
 [build-system]
-requires = ["poetry-core>=1.0.0"]
-build-backend = "poetry.core.masonry.api"
-
-[tool.taskipy.tasks]
-black = { cmd = "task lint black", help = "Run black" }
-isort = { cmd = "task lint isort", help = "Run isort" }
-lint = { cmd = "pre-commit run --all-files", help = "Check all files for linting errors" }
-precommit = { cmd = "pre-commit install --install-hooks", help = "Install the precommit hook" }
-pyright = { cmd = "python -m pyright", help = "Run pyright" }
+requires = ["hatchling"]
+build-backend = "hatchling.build"
 
 [tool.pyright]
 typeCheckingMode = "strict"
-
 reportReturnType = false
 reportUnnecessaryComparison = false
-
-[tool.black]
-line-length = 100
-target-version = ["py310", "py311", "py312"]
-
-[tool.isort]
-profile = "black"
 
 [tool.ruff]
 line-length = 100
@@ -93,3 +77,7 @@ convention = "numpy"
 
 [tool.ruff.lint.pylint]
 max-args = 6
+
+[tool.ruff.format]
+quote-style = "double"
+indent-style = "space"
