--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -42,9 +42,10 @@ jobs:
       - name: Install dependencies
         run: uv sync
 
+      - name: Add venv to PATH
+        run: echo "$(uv run python -c 'import sys; print(sys.prefix)')/bin" >> $GITHUB_PATH
+
       - uses: jakebailey/pyright-action@v2
-        with:
-          pylance-version: latest-release
 
   # Thanks to https://github.com/DisnakeDev for finding this job.
   check: # This job does nothing and is only used for the branch protection
