--- a/pyproject.toml
+++ b/pyproject.toml
@@ -36,6 +36,9 @@ dev = [
 requires = ["hatchling"]
 build-backend = "hatchling.build"
 
+[tool.hatch.build.targets.wheel]
+packages = ["battlemetrics"]
+
 [tool.pyright]
 typeCheckingMode = "strict"
 reportReturnType = false
