--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,4 +1,4 @@
-name: Publish to PYPI
+name: Publish to PyPI
 
 on:
   release:
@@ -6,15 +6,19 @@ on:
 
 jobs:
   pypi-publish:
-    name: upload release to PyPI
     runs-on: ubuntu-latest
-    # Specifying a GitHub environment is optional, but strongly encouraged
     environment: release
     permissions:
-      # IMPORTANT: this permission is mandatory for Trusted Publishing
       id-token: write
-    steps:
-      # retrieve your distributions here
 
-      - name: Publish package distributions to PyPI
+    steps:
+      - uses: actions/checkout@v4
+
+      - uses: astral-sh/setup-uv@v5
+
+      - name: Build Package
+        run: |
+          uv build
+
+      - name: Publish
         uses: pypa/gh-action-pypi-publish@release/v1
