--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,7 +17,10 @@ classifiers = [
     "Programming Language :: Python :: 3.12",
     "Programming Language :: Python :: 3.13",
 ]
-dependencies = ["aiohttp>=3.9.3", "pydantic>=2.0.0", "python-dateutil>=2.8.2"]
+dependencies = [
+    "aiohttp>=3.9.3",
+    "pydantic>=2.0.0",
+]
 
 [project.urls]
 "Homepage" = "https://github.com/OseSem/battlemetrics"
