--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [project]
 name = "battlemetrics"
 description = "Asyncronous Python wrapper for the BattleMetrics API."
-version = "2.0.3"
+version = "2.0.4"
 authors = [
     { name = "OseSem", email = "sem@osesem.xyz" },
     { name = "Gnomeslayer", email = "declan.otten@live.com.au" },
@@ -17,7 +17,7 @@ classifiers = [
     "Programming Language :: Python :: 3.12",
     "Programming Language :: Python :: 3.13",
 ]
-dependencies = ["aiohttp>=3.9.3", "pydantic>=2.0.0", "python-dateutil>=2.8.2"]
+dependencies = ["aiohttp>=3.9.3", "pydantic>=2.0.0"]
 
 [project.urls]
 "Homepage" = "https://github.com/OseSem/battlemetrics"
