feat: Add examples for server and player queries

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -47,6 +47,7 @@ reportUnnecessaryComparison = false
 [tool.ruff]
 line-length = 100
 target-version = "py312"
+exclude = ["examples"]
 
 [tool.ruff.lint]
 select = ["ALL"]
