--- a/pyproject.toml
+++ b/pyproject.toml
@@ -43,6 +43,7 @@ packages = ["battlemetrics"]
 typeCheckingMode = "strict"
 reportReturnType = false
 reportUnnecessaryComparison = false
+exclude = ["examples"]
 
 [tool.ruff]
 line-length = 100
